<resources>
    <string name="app_name">Marvel Comics</string>
    <string name="title_comics">Comics</string>
    <string name="title_creators">Creators</string>
    <string name="title_characters">Characters</string>


    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="navigation_open">Open Navigation Drawer</string>

    <string name="contact_us">contact us</string>
    <string name="action_share">share</string>
    <string name="action_send">send</string>
    <string name="title_profile">Profile</string>
    <string name="avatar">AVATAR</string>
    <string name="appears_in">Appears In:</string>
    <string name="series">series</string>
    <string name="stories">stories</string>
    <string name="comics">comics</string>
    <string name="characters">characters</string>
    <string name="creators">creators</string>
    <string name="name">Name</string>
    <string name="featured">Featured in</string>
    <string name="description">description</string>
    <string name="enter_search_term">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="search_hint">Hulk Smash…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_available_comics">Browse Comics</string>
    <string name="browse_characters">Browse Characters</string>
    <string name="browse">Browse</string>
    <string name="title_home">Home</string>
    <string name="title_activity_resource_grid">Characters</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hot_comics">Hot Comics</string>
    <string name="comic_updates">Comic Updates</string>
    <string name="on_sale">Recent Sales</string>
    <string name="favorites">Favorites</string>
    <string name="price">price </string>


</resources>