<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="3dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:elevation="10dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_background"
            android:padding="20dp">
            <ImageView
                android:id="@+id/character_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/character_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appears_in_comics"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/featured"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/character_thumbnail" />

                <TextView
                    android:id="@+id/appears_in_comics_value"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/gold"
                    app:layout_constraintTop_toBottomOf="@+id/character_thumbnail" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>