<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:elevation="10dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/comic_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/comic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />
            <TextView
                android:id="@+id/comic_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:maxLines="8"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                android:ellipsize="end"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>