<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.comics.ComicsFragment">

        <TextView
            android:id="@+id/updates"
            android:padding="12dp"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comic_updates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/updates_list"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updates">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/on_sale_text"
            android:padding="12dp"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_sale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updates_list"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/on_sale_list"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/on_sale_text"
            tools:listitem="@layout/comic_sale_card">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/my_list"
            android:padding="12dp"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_sale_list"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>