<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:elevation="10dp"
    android:focusable="true"
    android:background="?attr/colorPrimary"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/character_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/character_name"
                style="@style/TextAppearance.MaterialComponents.Tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:padding="4dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/character_thumbnail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appears_in_comics"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/featured"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/character_thumbnail" />

                <TextView
                    android:id="@+id/appears_in_comics_value"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/gold"
                    app:layout_constraintTop_toBottomOf="@+id/character_thumbnail" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>